crates/math-core/tests/snapshots/error_test__sup_sup.snap
---
source: crates/math-core/tests/error_test.rs
expression: x^2^3 y
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:4 ]
   │
 1 │ x^2^3 y
   │    ┬  
   │    ╰── duplicate
───╯
